fix scrollbar in the bimdata-cards of the projects page (#68)

--- a/src/components/specific/files/files-manager/FilesManager.scss
+++ b/src/components/specific/files/files-manager/FilesManager.scss
@@ -8,7 +8,7 @@
 
     .bimdata-card__content {
       position: relative;
-      height: calc(100% - 35px - 26px);
+      height: calc(100% - 37px - 27px);
 
       display: grid;
       grid-template-columns: 400px 1fr;
