--- a/src/components/specific/models/models-overview/ModelsOverview.scss
+++ b/src/components/specific/models/models-overview/ModelsOverview.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    height: calc(100% - 35px);
+    height: calc(100% - 37px);
     padding: $spacing-unit * 2;
   }
 }
