--- a/src/components/specific/users/project-users-manager/ProjectUsersManager.scss
+++ b/src/components/specific/users/project-users-manager/ProjectUsersManager.scss
@@ -1,6 +1,6 @@
 .project-users-manager {
   &.bimdata-card:deep() > .bimdata-card__content {
-    height: calc(100% - 35px);
+    height: calc(100% - 37px);
     padding: 0;
   }
 
